--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <p>Your first skill is : {{ skills[0] }}</p>
         <p>You are {{ isSubscribed ? 'Subscribed' : 'Not Subscribed' }}</p>
         <p>Your first test name is : {{ completedTests[0].testName }}</p>
+        <p>Your first test result is : {{ completedTests[0].testResult }}</p>
     </div>
     <script src="js/vue.js"></script>
     <script>
