--- a/index.html
+++ b/index.html
@@ -10,43 +10,14 @@
     <div id="karim-app">
         <h1>Welcome to my app</h1>
         <p>Welcome {{ 'Mr ' + name }} we are happy to see you.</p>
-        <p>My age is : {{ age + ' Years' }}</p>
-        <p>Your first skill is : {{ skills[0] }}</p>
-        <p>You are {{ isSubscribed ? 'Subscribed' : 'Not Subscribed' }}</p>
-        <p>Your first test name is : {{ completedTests[0].testName }}</p>
-        <p>Your first test result is : {{ completedTests[0].testResult }}</p>
-        <p>{{ yourAgeInDays() }}</p>
-        <p>{{ date }}</p>
-        <button @click='newDate()'>Click to show new date</button>
+        <p v-text=" 'Your name is ' + name "></p>
     </div>
     <script src="js/vue.js"></script>
     <script>
         var vm = new Vue({
             el: "#karim-app",
             data: {
-                name: "Karim",
-                age: 20,
-                skills: ['Html', 'Css', 'Javascript', 'PHP', 'MySQL'],
-                isSubscribed: false,
-                completedTests: [{
-                    testName: 'Arabic',
-                    testResult: '75%'
-                }, {
-                    testName: 'English',
-                    testResult: '88%'
-                }, {
-                    testName: 'Math',
-                    testResult: '69%'
-                }],
-                date: 'Today'
-            },
-            methods: {
-                yourAgeInDays: function() {
-                    return "My age in days is : " + this.age * 365 + " Day";
-                },
-                newDate: function() {
-                    this.date = Date();
-                }
+                name: 'Karim'
             }
         })
     </script>
